# NanoShip

./: .env.example  LICENSE  README.md  pyproject.toml
nanoship/: __init__.py  ai_engine.py  cli.py  config.py  database.py  deployer.py  monitor.py  project_analyzer.py  ssh_manager.py
tests/: __init__.py  test_analyzer.py
